fixed overlap caused by incorrect live server zoom level

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -228,7 +228,7 @@ header a {
     background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
     margin: 3em;
-    border: 2px solid black;
+    border: 1px solid black;
     display: flex;
     flex-direction: column;
     height: 20em;
@@ -257,9 +257,9 @@ header a {
 /* call to action -> grid showcase */
 .home-grid-showcase {
     background-color: rgba(255, 255, 255, 0.8);
-    border: 2px solid black;
+    border: 1px solid black;
     margin: 0 3em;
-    margin-top: 11.5em;
+    margin-top: 7em;
 }
 
 .home-grid-showcase h2 {
@@ -293,7 +293,7 @@ header a {
 }
 
 .home-grid-showcase .home-grid-item img {
-    height: 20em;
+    height: 17em;
     border: 2px solid rgba(0, 0, 0, 0.2);
 }
 
